Support input sanitization

--- a/pipelines_template/processes/example_process.yml
+++ b/pipelines_template/processes/example_process.yml
@@ -28,5 +28,5 @@
     program: |
       echo "{\"output\":\"Hello pipelines\"}"
 
-      mv "{{ src.file_temp }}" "{{ src.file }}"
-      re-save-file dst "{{ src.file }}"
+      mv {{ src.file_temp }} {{ src.file }}
+      re-save-file dst {{ src.file }}
